--- a/dobitnici.html
+++ b/dobitnici.html
@@ -701,17 +701,71 @@
                 <tr class="half-on-lg">
                     <td>
                         <div class="happyBox">
-                            <div class="happyBox__img">
-                                <img src="images/dobitnici/win01news.png" alt="">
+                            <div class="happyBox__bg" style="background-image: url(images/dobitnici/jeep@dobitnik.png);"></div>
+                            <div class="happyBox__txt">
+                                <p class="wBt-date">25.09.2020.</p>
+                                <h4 class="wBt-headline">Novi džip odlazi u Zubin Potok</h4>
+                                <p class="wBt-link">
+                                    Da je Zubin Potok, od 7.000
+                                    stanovnika na Kosovu i
+                                    Metohiji, srećno mesto
+                                    pokazalo se i u 86.
+                                    specijalnom...
+                                    <a href="#." class="link-arrow link-arrow--red">Više</a>
+                                </p>
                             </div>
+                        </div>
+                    </td>
+                </tr>
+                <tr class="half-on-lg">
+                    <td>
+                        <div class="happyBox">
+                            <div class="happyBox__bg" style="background-image: url(images/dobitnici/jeepw@dobitnik.png);"></div>
+                            <div class="happyBox__txt">
+                                <p class="wBt-date">10.07.2020.</p>
+                                <h4 class="wBt-headline">Novi džip odlazi u
+                                    Zubin Potok</h4>
+                                <p class="wBt-link">
+                                    Da je Zubin Potok, od 7.000
+                                    stanovnika na Kosovu i
+                                    Metohiji, srećno mesto
+                                    pokazalo se i u 86.
+                                    specijalnom...
+                                    <a href="#." class="link-arrow link-arrow--red">Više</a>
+                                </p>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+                <tr class="half-on-lg">
+                    <td>
+                        <div class="happyBox">
+                            <div class="happyBox__bg" style="background-image: url(images/dobitnici/srecnidob@dobitnik.png);"></div>
                             <div class="happyBox__txt">
                                 <p class="wBt-date">04.11.2020.</p>
-                                <h4 class="wBt-headline">Greb Greb 150 - Omiljena grebalica s razlogom!</h4>
+                                <h4 class="wBt-headline">Srećni dobitnici nagradne igre „Lutrijska euforija“</h4>
                                 <p class="wBt-link">
                                     Srećni niz dobitnika se nastavlja! Ovog puta,
                                     Greb Greb 150 glavna premija, u iznosu od
                                     4.550.000 dinara...
-                                    <a href="#." class="link-arrow link-arrow--red">Saznaj više</a>
+                                    <a href="#." class="link-arrow link-arrow--red">Više</a>
+                                </p>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+                <tr class="half-on-lg">
+                    <td>
+                        <div class="happyBox">
+                            <div class="happyBox__bg" style="background-image: url(images/dobitnici/merc@dobitnik.png);"></div>
+                            <div class="happyBox__txt">
+                                <p class="wBt-date">04.11.2020.</p>
+                                <h4 class="wBt-headline">Mercedes C200 odlazi u Kragujevac</h4>
+                                <p class="wBt-link">
+                                    Srećni niz dobitnika se nastavlja! Ovog puta,
+                                    Greb Greb 150 glavna premija, u iznosu od
+                                    4.550.000 dinara...
+                                    <a href="#." class="link-arrow link-arrow--red">Više</a>
                                 </p>
                             </div>
                         </div>
@@ -730,7 +784,7 @@
                                     Srećni niz dobitnika se nastavlja! Ovog puta,
                                     Greb Greb 150 glavna premija, u iznosu od
                                     4.550.000 dinara...
-                                    <a href="#." class="link-arrow link-arrow--red">Saznaj više</a>
+                                    <a href="#." class="link-arrow link-arrow--red">Više</a>
                                 </p>
                             </div>
                         </div>
@@ -749,7 +803,7 @@
                                     Srećni niz dobitnika se nastavlja! Ovog puta,
                                     Greb Greb 150 glavna premija, u iznosu od
                                     4.550.000 dinara...
-                                    <a href="#." class="link-arrow link-arrow--red">Saznaj više</a>
+                                    <a href="#." class="link-arrow link-arrow--red">Više</a>
                                 </p>
                             </div>
                         </div>
@@ -768,7 +822,7 @@
                                     Srećni niz dobitnika se nastavlja! Ovog puta,
                                     Greb Greb 150 glavna premija, u iznosu od
                                     4.550.000 dinara...
-                                    <a href="#." class="link-arrow link-arrow--red">Saznaj više</a>
+                                    <a href="#." class="link-arrow link-arrow--red">Više</a>
                                 </p>
                             </div>
                         </div>
@@ -787,7 +841,7 @@
                                     Srećni niz dobitnika se nastavlja! Ovog puta,
                                     Greb Greb 150 glavna premija, u iznosu od
                                     4.550.000 dinara...
-                                    <a href="#." class="link-arrow link-arrow--red">Saznaj više</a>
+                                    <a href="#." class="link-arrow link-arrow--red">Više</a>
                                 </p>
                             </div>
                         </div>
@@ -806,64 +860,7 @@
                                     Srećni niz dobitnika se nastavlja! Ovog puta,
                                     Greb Greb 150 glavna premija, u iznosu od
                                     4.550.000 dinara...
-                                    <a href="#." class="link-arrow link-arrow--red">Saznaj više</a>
-                                </p>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr class="half-on-lg">
-                    <td>
-                        <div class="happyBox">
-                            <div class="happyBox__img">
-                                <img src="images/dobitnici/win01news.png" alt="">
-                            </div>
-                            <div class="happyBox__txt">
-                                <p class="wBt-date">04.11.2020.</p>
-                                <h4 class="wBt-headline">Greb Greb 150 - Omiljena grebalica s razlogom!</h4>
-                                <p class="wBt-link">
-                                    Srećni niz dobitnika se nastavlja! Ovog puta,
-                                    Greb Greb 150 glavna premija, u iznosu od
-                                    4.550.000 dinara...
-                                    <a href="#." class="link-arrow link-arrow--red">Saznaj više</a>
-                                </p>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr class="half-on-lg">
-                    <td>
-                        <div class="happyBox">
-                            <div class="happyBox__img">
-                                <img src="images/dobitnici/win01news.png" alt="">
-                            </div>
-                            <div class="happyBox__txt">
-                                <p class="wBt-date">04.11.2020.</p>
-                                <h4 class="wBt-headline">Greb Greb 150 - Omiljena grebalica s razlogom!</h4>
-                                <p class="wBt-link">
-                                    Srećni niz dobitnika se nastavlja! Ovog puta,
-                                    Greb Greb 150 glavna premija, u iznosu od
-                                    4.550.000 dinara...
-                                    <a href="#." class="link-arrow link-arrow--red">Saznaj više</a>
-                                </p>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr class="half-on-lg">
-                    <td>
-                        <div class="happyBox">
-                            <div class="happyBox__img">
-                                <img src="images/dobitnici/win01news.png" alt="">
-                            </div>
-                            <div class="happyBox__txt">
-                                <p class="wBt-date">04.11.2020.</p>
-                                <h4 class="wBt-headline">Greb Greb 150 - Omiljena grebalica s razlogom!</h4>
-                                <p class="wBt-link">
-                                    Srećni niz dobitnika se nastavlja! Ovog puta,
-                                    Greb Greb 150 glavna premija, u iznosu od
-                                    4.550.000 dinara...
-                                    <a href="#." class="link-arrow link-arrow--red">Saznaj više</a>
+                                    <a href="#." class="link-arrow link-arrow--red">Više</a>
                                 </p>
                             </div>
                         </div>
