--- a/dobitnici.html
+++ b/dobitnici.html
@@ -705,14 +705,14 @@
                             <div class="happyBox__txt">
                                 <p class="wBt-date">25.09.2020.</p>
                                 <h4 class="wBt-headline">Novi džip odlazi u Zubin Potok</h4>
-                                <p class="wBt-link">
+                                <p class="wBt-link truncate-overflow">
                                     Da je Zubin Potok, od 7.000
                                     stanovnika na Kosovu i
                                     Metohiji, srećno mesto
                                     pokazalo se i u 86.
-                                    specijalnom...
-                                    <a href="#." class="link-arrow link-arrow--red">Više</a>
+                                    specijalnom
                                 </p>
+                                <a href="#." class="link-arrow link-arrow--red">Više</a>
                             </div>
                         </div>
                     </td>
@@ -725,14 +725,14 @@
                                 <p class="wBt-date">10.07.2020.</p>
                                 <h4 class="wBt-headline">Novi džip odlazi u
                                     Zubin Potok</h4>
-                                <p class="wBt-link">
+                                <p class="wBt-link truncate-overflow">
                                     Da je Zubin Potok, od 7.000
                                     stanovnika na Kosovu i
                                     Metohiji, srećno mesto
                                     pokazalo se i u 86.
-                                    specijalnom...
-                                    <a href="#." class="link-arrow link-arrow--red">Više</a>
+                                    specijalnom
                                 </p>
+                                <a href="#." class="link-arrow link-arrow--red">Više</a>
                             </div>
                         </div>
                     </td>
@@ -744,12 +744,13 @@
                             <div class="happyBox__txt">
                                 <p class="wBt-date">04.11.2020.</p>
                                 <h4 class="wBt-headline">Srećni dobitnici nagradne igre „Lutrijska euforija“</h4>
-                                <p class="wBt-link">
-                                    Srećni niz dobitnika se nastavlja! Ovog puta,
-                                    Greb Greb 150 glavna premija, u iznosu od
-                                    4.550.000 dinara...
-                                    <a href="#." class="link-arrow link-arrow--red">Više</a>
+                                <p class="wBt-link truncate-overflow">
+                                    Generalna direktorka
+                                    Državne Lutrije Srbije
+                                    Simonida Kažić svečano je
+                                    uručila nagrade dobitnicima na
                                 </p>
+                                <a href="#." class="link-arrow link-arrow--red">Više</a>
                             </div>
                         </div>
                     </td>
@@ -761,12 +762,14 @@
                             <div class="happyBox__txt">
                                 <p class="wBt-date">04.11.2020.</p>
                                 <h4 class="wBt-headline">Mercedes C200 odlazi u Kragujevac</h4>
-                                <p class="wBt-link">
-                                    Srećni niz dobitnika se nastavlja! Ovog puta,
-                                    Greb Greb 150 glavna premija, u iznosu od
-                                    4.550.000 dinara...
-                                    <a href="#." class="link-arrow link-arrow--red">Više</a>
+                                <p class="wBt-link truncate-overflow">
+                                    Čestitamo izvučenom
+                                    dobitniku automobila
+                                    Mercedes C200!
+                                    Broj dobitne potvrde je iz
+                                    Kragujevca
                                 </p>
+                                <a href="#." class="link-arrow link-arrow--red">Više</a>
                             </div>
                         </div>
                     </td>
@@ -870,7 +873,24 @@
         </table>
 
     </div>
-<!-- HAPPY NEWS -->
+    <!-- HAPPY NEWS -->
+    
+    <!-- DONACIJA -->
+    <section class="donacija pt-5">
+        <div class="container">
+            <div class="row">
+                <div class="donacija__img">
+                    <img src="images/dobitnici/donacija.svg" alt="">
+                </div>
+            </div>
+            <div class="row">
+                <div class="donacija__txt">
+                    <p><a href="#">Saznaj gde odlazi</a> deo novca od svakog uplaćenog listića.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- DONACIJA -->
 
     <!-- FOOTER -->
     <footer class="footer">
