--- a/dobitnici.html
+++ b/dobitnici.html
@@ -777,18 +777,18 @@
                 <tr class="half-on-lg">
                     <td>
                         <div class="happyBox">
-                            <div class="happyBox__img">
-                                <img src="images/dobitnici/win01news.png" alt="">
-                            </div>
+                            <div class="happyBox__bg" style="background-image: url(images/dobitnici/merc@dobitnik.png);"></div>
                             <div class="happyBox__txt">
                                 <p class="wBt-date">04.11.2020.</p>
-                                <h4 class="wBt-headline">Greb Greb 150 - Omiljena grebalica s razlogom!</h4>
-                                <p class="wBt-link">
-                                    Srećni niz dobitnika se nastavlja! Ovog puta,
-                                    Greb Greb 150 glavna premija, u iznosu od
-                                    4.550.000 dinara...
-                                    <a href="#." class="link-arrow link-arrow--red">Više</a>
+                                <h4 class="wBt-headline">Mercedes C200 odlazi u Kragujevac</h4>
+                                <p class="wBt-link truncate-overflow">
+                                    Čestitamo izvučenom
+                                    dobitniku automobila
+                                    Mercedes C200!
+                                    Broj dobitne potvrde je iz
+                                    Kragujevca
                                 </p>
+                                <a href="#." class="link-arrow link-arrow--red">Više</a>
                             </div>
                         </div>
                     </td>
@@ -796,18 +796,19 @@
                 <tr class="half-on-lg">
                     <td>
                         <div class="happyBox">
-                            <div class="happyBox__img">
-                                <img src="images/dobitnici/win01news.png" alt="">
-                            </div>
+                            <div class="happyBox__bg" style="background-image: url(images/dobitnici/jeepw@dobitnik.png);"></div>
                             <div class="happyBox__txt">
-                                <p class="wBt-date">04.11.2020.</p>
-                                <h4 class="wBt-headline">Greb Greb 150 - Omiljena grebalica s razlogom!</h4>
-                                <p class="wBt-link">
-                                    Srećni niz dobitnika se nastavlja! Ovog puta,
-                                    Greb Greb 150 glavna premija, u iznosu od
-                                    4.550.000 dinara...
-                                    <a href="#." class="link-arrow link-arrow--red">Više</a>
+                                <p class="wBt-date">10.07.2020.</p>
+                                <h4 class="wBt-headline">Novi džip odlazi u
+                                    Zubin Potok</h4>
+                                <p class="wBt-link truncate-overflow">
+                                    Da je Zubin Potok, od 7.000
+                                    stanovnika na Kosovu i
+                                    Metohiji, srećno mesto
+                                    pokazalo se i u 86.
+                                    specijalnom
                                 </p>
+                                <a href="#." class="link-arrow link-arrow--red">Više</a>
                             </div>
                         </div>
                     </td>
@@ -815,18 +816,18 @@
                 <tr class="half-on-lg">
                     <td>
                         <div class="happyBox">
-                            <div class="happyBox__img">
-                                <img src="images/dobitnici/win01news.png" alt="">
-                            </div>
+                            <div class="happyBox__bg" style="background-image: url(images/dobitnici/jeep@dobitnik.png);"></div>
                             <div class="happyBox__txt">
-                                <p class="wBt-date">04.11.2020.</p>
-                                <h4 class="wBt-headline">Greb Greb 150 - Omiljena grebalica s razlogom!</h4>
-                                <p class="wBt-link">
-                                    Srećni niz dobitnika se nastavlja! Ovog puta,
-                                    Greb Greb 150 glavna premija, u iznosu od
-                                    4.550.000 dinara...
-                                    <a href="#." class="link-arrow link-arrow--red">Više</a>
+                                <p class="wBt-date">25.09.2020.</p>
+                                <h4 class="wBt-headline">Novi džip odlazi u Zubin Potok</h4>
+                                <p class="wBt-link truncate-overflow">
+                                    Da je Zubin Potok, od 7.000
+                                    stanovnika na Kosovu i
+                                    Metohiji, srećno mesto
+                                    pokazalo se i u 86.
+                                    specijalnom
                                 </p>
+                                <a href="#." class="link-arrow link-arrow--red">Više</a>
                             </div>
                         </div>
                     </td>
@@ -834,18 +835,18 @@
                 <tr class="half-on-lg">
                     <td>
                         <div class="happyBox">
-                            <div class="happyBox__img">
-                                <img src="images/dobitnici/win01news.png" alt="">
-                            </div>
+                            <div class="happyBox__bg" style="background-image: url(images/dobitnici/jeep@dobitnik.png);"></div>
                             <div class="happyBox__txt">
-                                <p class="wBt-date">04.11.2020.</p>
-                                <h4 class="wBt-headline">Greb Greb 150 - Omiljena grebalica s razlogom!</h4>
-                                <p class="wBt-link">
-                                    Srećni niz dobitnika se nastavlja! Ovog puta,
-                                    Greb Greb 150 glavna premija, u iznosu od
-                                    4.550.000 dinara...
-                                    <a href="#." class="link-arrow link-arrow--red">Više</a>
+                                <p class="wBt-date">25.09.2020.</p>
+                                <h4 class="wBt-headline">Novi džip odlazi u Zubin Potok</h4>
+                                <p class="wBt-link truncate-overflow">
+                                    Da je Zubin Potok, od 7.000
+                                    stanovnika na Kosovu i
+                                    Metohiji, srećno mesto
+                                    pokazalo se i u 86.
+                                    specijalnom
                                 </p>
+                                <a href="#." class="link-arrow link-arrow--red">Više</a>
                             </div>
                         </div>
                     </td>
@@ -853,18 +854,18 @@
                 <tr class="half-on-lg">
                     <td>
                         <div class="happyBox">
-                            <div class="happyBox__img">
-                                <img src="images/dobitnici/win01news.png" alt="">
-                            </div>
+                            <div class="happyBox__bg" style="background-image: url(images/dobitnici/jeep@dobitnik.png);"></div>
                             <div class="happyBox__txt">
-                                <p class="wBt-date">04.11.2020.</p>
-                                <h4 class="wBt-headline">Greb Greb 150 - Omiljena grebalica s razlogom!</h4>
-                                <p class="wBt-link">
-                                    Srećni niz dobitnika se nastavlja! Ovog puta,
-                                    Greb Greb 150 glavna premija, u iznosu od
-                                    4.550.000 dinara...
-                                    <a href="#." class="link-arrow link-arrow--red">Više</a>
+                                <p class="wBt-date">25.09.2020.</p>
+                                <h4 class="wBt-headline">Novi džip odlazi u Zubin Potok</h4>
+                                <p class="wBt-link truncate-overflow">
+                                    Da je Zubin Potok, od 7.000
+                                    stanovnika na Kosovu i
+                                    Metohiji, srećno mesto
+                                    pokazalo se i u 86.
+                                    specijalnom
                                 </p>
+                                <a href="#." class="link-arrow link-arrow--red">Više</a>
                             </div>
                         </div>
                     </td>
