moj profil strana

--- a/moj-profil.html
+++ b/moj-profil.html
@@ -1103,11 +1103,11 @@
                                 aria-labelledby="poruke">
                                 <div class="row list-group flex-row list-tab__inner list-tab__inner--poruke" id="list-tabb"
                                     role="tablist">
-                                    <button class="btn btn-darkk btn-primary-tab rounded-pill px-3 mx-1 active"
+                                    <button class="btn btn-darkk btn-primary-tab rounded-pill px-3 px-xs-2 mx-1 active"
                                         id="primljene-poruke" data-toggle="list" href="#primljene-poruke1" role="tab"
                                         aria-controls="primljene-poruke" style="z-index: 999;">Primljene
                                         poruke</button>
-                                    <button class="btn btn-darkk btn-primary-tab rounded-pill px-3 mx-1"
+                                    <button class="btn btn-darkk btn-primary-tab rounded-pill px-3 px-xs-2 mx-1"
                                         id="prosledjene-poruke" data-toggle="list" href="#prosledjene-poruke1" role="tab"
                                         aria-controls="prosledjene-poruke" style="z-index: 999;">Prosleđene
                                         poruke</button>
@@ -1456,7 +1456,6 @@
                                     </div>
                                 </div>
 
-
                             </div>
                         </div>
                     </div>
@@ -1701,14 +1700,11 @@
                             value="zecar.vesna@gmail.com">
                     </div>
                     <div class="col-sm-4 col-12 my-xs-05">
-                        <button type="button" class="btn btn-success font-weight-bold px-3 btn-block text-sm" data-toggle="modal"
-                            data-target="#favorite-modal-done" data-dismiss="modal" aria-label="Close">PROSLEDI
+                        <button type="button" class="btn btn-success font-weight-bold px-3 btn-block text-sm">PROSLEDI
                             PORUKU</button>
                     </div>
                     <div class="col-sm-4 col-12 my-xs-05">
-                        <button type="button" class="btn btn-dark font-weight-bold px-3 btn-block text-sm"
-                            data-dismiss="modal"
-                            aria-label="Close">OBRIŠI PORUKU</button>
+                        <button type="button" class="btn btn-dark font-weight-bold px-3 btn-block text-sm">OBRIŠI PORUKU</button>
                     </div>
                 </div>
             </div>
