--- a/moj-profil.html
+++ b/moj-profil.html
@@ -9,7 +9,8 @@
     <!-- We will revisit font in the end -->
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@800&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@800&display=swap" rel="stylesheet">
+    <link href="css/picker.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="css/selectize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-1.css">
@@ -67,18 +68,28 @@
                             </div>
                         </li>
                     </ul>
-                    <p class="nav-user text-sm mr-md-4 m-sm-1">
-                        <img src="images/Pomoc-igracima.png" alt="" class="nav-user__img">
-                        <strong class="ml-1">bogati_dzoni</strong>
-                        <i class="fas fa-envelope nav-user__msg ml-2">
-                            <span class="new-msg">12</span>
-                        </i>
-                    </p>
-                    <a href="#" class="btn btn-outline-dark mr-md-2 my-sm-0" type="submit" style="display: block;">ODJAVI SE</a>
-                    <a href="#" class="btn btn-outline-dark mr-md-2 my-sm-0" type="submit"
-                    style="display: none;">PRIJAVI SE</a>
-                    <a href="#" class="btn btn-primary my-sm-0" type="submit" style="display: none;"><strong>REGISTRUJ
-                            SE</strong></a>
+
+                    <!-- Logged in -->
+                    <div class="logged-in" style="display: none;">
+                        <p class="nav-user text-sm mr-md-4 m-sm-1">
+                            <img src="images/Pomoc-igracima.png" alt="" class="nav-user__img">
+                            <strong class="ml-1">bogati_dzoni</strong>
+                            <a href="moj-profil.html" class="link-black">
+                                <i class="fas fa-envelope nav-user__msg ml-2">
+                                    <span class="new-msg">12</span>
+                                </i>
+                            </a>
+                        </p>
+                        <a href="#" class="btn btn-outline-dark mr-md-2 my-sm-0" type="submit">ODJAVI SE</a>
+                    </div>
+
+                    <!-- Logged out -->
+                    <div class="logged-out">
+                        <a href="#" class="btn btn-outline-dark mr-md-2 my-sm-0" type="submit"
+                    >PRIJAVI SE</a>
+                        <a href="#" class="btn btn-primary my-sm-0" type="submit"><strong>REGISTRUJ
+                                SE</strong></a>
+                    </div>
                 </div>
             </nav>
         </div>
@@ -86,7 +97,7 @@
     <!-- NAVIGATION -->
 
     <!-- MAIN BANNER -->
-    <section class="main-banner main-banner--blue">
+    <section class="main-banner main-banner--red">
         <div class="container">
             <div class="row pt-5 pb-5">
                 <div class="col-12 pb-4">
@@ -165,11 +176,11 @@
                                 <div class="row justify-content-center">
                                     <div class="col-md-10 mt-5">
                                         <div class="row list-group flex-row list-group--nd list-tab__inner" id="list-tabb" role="tablist">
-                                            <button class="col btn btn-darkk btn-primary-tab rounded-pill px-1 mx-1 active" id="pregled_uplata"
+                                            <button class="col btn btn-dark-tab rounded-pill px-1 mx-1 active" id="pregled_uplata"
                                                 data-toggle="list" href="#pregled_uplata1" role="tab"
                                                 aria-controls="pregled_uplata">Pregled uplata</button>
                                             <li class="nav-item dropdown col px-1 mx-1 list-unstyled" >
-                                                <button class="nav-link dropdown-toggle btn btn-darkk btn-primary-tab rounded-pill"
+                                                <button class="nav-link dropdown-toggle btn btn-dark-tab rounded-pill"
                                                     id="navbarDropdown"
                                                     role="button" data-toggle="dropdown" aria-haspopup="true"
                                                     aria-expanded="false" style="width: 100%;">
@@ -184,12 +195,12 @@
                                                         aria-controls="izvrsi_uplatu_kartica">Plati platnom karticom</a>
                                                 </div>
                                             </li>
-                                            <button class="col btn btn-darkk btn-primary-tab rounded-pill px-1 mx-1" id="pregled_isplata"
+                                            <button class="col btn btn-dark-tab rounded-pill px-1 mx-1" id="pregled_isplata"
                                                 data-toggle="list" href="#pregled_isplata1" role="tab"
                                                 aria-controls="pregled_isplata">Pregled isplata</button>
 
                                             <li class="nav-item dropdown col px-1 mx-1 list-unstyled">
-                                                <button class="nav-link dropdown-toggle btn btn-darkk btn-primary-tab rounded-pill"
+                                                <button class="nav-link dropdown-toggle btn btn-dark-tab rounded-pill"
                                                     id="navbarDropdown" role="button" data-toggle="dropdown"
                                                     aria-haspopup="true" aria-expanded="false" style="width: 100%;">
                                                     Zatraži isplatu
@@ -421,7 +432,7 @@
                                                     Minimalni iznos za isplatu je 100 dinara.
                                                 </div>
                                                 <button type="submit"
-                                                    class="btn btn-success btn-block mt-4 mb-3 mx-auto"><strong>ZATRAŽI
+                                                    class="btn btn-success btn-block mt-4 mb-5 mx-auto"><strong>ZATRAŽI
                                                         ISPLATU</strong></button>
                                             </div>
                                         </form>
@@ -451,7 +462,7 @@
                                                     Minimalni iznos za isplatu je 100 dinara.
                                                 </div>
                                                 <button type="submit"
-                                                    class="btn btn-success btn-block mt-4 mb-3 mx-auto"><strong>ZATRAŽI ISPLATU</strong></button>
+                                                    class="btn btn-success btn-block mt-4 mb-5 mx-auto"><strong>ZATRAŽI ISPLATU</strong></button>
                                              </div>
                                          </form>
                                     </div>
@@ -471,7 +482,8 @@
                                                     <label class="my-1 d-block font-weight-normal text-sm">Period od:</label>
                                                 </div>
                                                 <div class="col-11 col-sm-6">
-                                                    <input type="text" class="form-control font-weight-normal"
+                                                    <input type="text" class="datepicker"
+                                                        class="form-control font-weight-normal"
                                                         placeholder="dd/mm/yyyy" minlength="10" minlength="10"
                                                         required="">
                                                     <div class="invalid-feedback">
@@ -487,7 +499,8 @@
                                                     <label class="my-1 d-block font-weight-normal text-sm">Period do:</label>
                                                 </div>
                                                 <div class="col-11 col-sm-6">
-                                                    <input type="text" class="form-control font-weight-normal"
+                                                    <input type="text" class="datepicker2"
+                                                        class="form-control font-weight-normal"
                                                         placeholder="dd/mm/yyyy" minlength="10" minlength="10"
                                                         required="">
                                                     <div class="invalid-feedback">
@@ -661,11 +674,11 @@
                                         <div class="row list-group flex-row list-tab__inner" id="list-tabb"
                                             role="tablist">
                                             <button
-                                                class="col btn btn-darkk btn-primary-tab rounded-pill px-1 mx-1 active"
+                                                class="col btn btn-dark-tab rounded-pill px-1 mx-1 active"
                                                 id="standardni-tiketi"
                                                 data-toggle="list" href="#standardni-tiketi1" role="tab"
                                                 aria-controls="standardni-tiketi">Standardni tiketi</button>
-                                            <button class="col btn btn-darkk btn-primary-tab rounded-pill px-1 mx-1"
+                                            <button class="col btn btn-dark-tab rounded-pill px-1 mx-1"
                                                 id="sistemski-tiketi"
                                                 data-toggle="list" href="#sistemski-tiketi1" role="tab"
                                                 aria-controls="sistemski-tiketi">Sistemski tiketi</button>
@@ -1106,11 +1119,11 @@
                                 aria-labelledby="poruke">
                                 <div class="row list-group flex-row list-tab__inner list-tab__inner--poruke" id="list-tabb"
                                     role="tablist">
-                                    <button class="btn btn-darkk btn-primary-tab rounded-pill px-3 px-xs-2 mx-1 active"
+                                    <button class="btn btn-dark-tab rounded-pill px-3 px-xs-2 mx-1 active"
                                         id="primljene-poruke" data-toggle="list" href="#primljene-poruke1" role="tab"
                                         aria-controls="primljene-poruke" style="z-index: 999;">Primljene
                                         poruke</button>
-                                    <button class="btn btn-darkk btn-primary-tab rounded-pill px-3 px-xs-2 mx-1"
+                                    <button class="btn btn-dark-tab rounded-pill px-3 px-xs-2 mx-1"
                                         id="prosledjene-poruke" data-toggle="list" href="#prosledjene-poruke1" role="tab"
                                         aria-controls="prosledjene-poruke" style="z-index: 999;">Prosleđene
                                         poruke</button>
@@ -1673,7 +1686,7 @@
 
     <div class="modal fade" tabindex="-1" id="message-modal">
         <div class="modal-dialog">
-            <div class="modal-content">
+            <div class="modal-content p-2">
                 <div class="modal-header">
                     <h5 class="modal-title text-left">Obaveštenje o dodeli Bonusa</h5>
                     <p class="text-sm color-light-gray">08.09.2020. 12:28</p>
@@ -1722,7 +1735,7 @@
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
     </script>
     <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
-
+    <script src="js/datepicker.js" type="text/javascript"></script>
     <script src="js/main.js"></script>
     <script src="js/selectize.js"></script>
 
@@ -1860,6 +1873,14 @@
             $(".sorting-table select").addClass('custom-select');
             $(".sorting-table input[type='search']").addClass('form-control form-control--light');
             $(".sorting-table input[type='search']").attr("placeholder", "Pretrazi");
+
+            // Adjust column widths
+            $(function(){
+                $('.list-group button').on('shown.bs.tab', function (e) {
+                    var tables = $('.sorting-table .datatable').DataTable();
+                    tables.columns.adjust().draw();
+                })
+            })
         });
     </script>
 
@@ -1872,6 +1893,7 @@
     </script>
 
     <script>
+        // Limited hidden field
         $('input.limit').click(function(){
             if ($(this).is(':checked')) {
                 $('.limit-field').addClass('d-flex');
@@ -1880,6 +1902,7 @@
             }
         })
 
+        // Change pass - my profile
         $('#change-pass').click(function(){
             $('.moj-profil').hide('500');
             $('.moj-profil-lozinka').addClass('d-block');
@@ -1907,14 +1930,16 @@
                 scrollTop: $(".ticket-card").offset().top
             }, 500);
         });
-
-        $(function(){
-            $('.list-group button').on('shown.bs.tab', function (e) {
-                var tables = $('.sorting-table .datatable').DataTable();
-                tables.columns.adjust().draw();
-            })
-        })
     </script>
+
+     <script>
+         $('.datepicker').datepicker({
+             uiLibrary: 'bootstrap'
+         });
+         $('.datepicker2').datepicker({
+             uiLibrary: 'bootstrap'
+         });
+     </script>
     
 </body>
 </html>
