--- a/moj-profil.html
+++ b/moj-profil.html
@@ -330,7 +330,7 @@
                                                     Vrednost ne može biti manja od 100 rsd
                                                 </div>
                                                 <button type="submit" class="btn btn-success btn-block mt-4 mb-3 mx-auto"><strong>NASTAVI</strong></button>
-                                                <a href="#" class="mt-5 d-block mb-3">Uputstvo za korišćenje platnih
+                                                <a href="#" class="mt-5 d-block mb-3 text-sm">Uputstvo za korišćenje platnih
                                                     kartica za plaćanje</a>
                                             </div>
                                         </form>
@@ -588,7 +588,7 @@
                                                     <td>Blokada</td>
                                                     <td>15.000,00</td>
                                                     <td>255,00</td>
-                                                    <td class="font-weight-bold color-blue">Uspešna</td>
+                                                    <td class="font-weight-bold color-green">Uspešna</td>
                                                 </tr>
                                                 <tr>
                                                     <td>12.03.2020.</td>
@@ -596,7 +596,7 @@
                                                     <td>Blokada</td>
                                                     <td>15.000,00</td>
                                                     <td>255,00</td>
-                                                    <td class="font-weight-bold color-blue">Uspešna</td>
+                                                    <td class="font-weight-bold color-green">Uspešna</td>
                                                 </tr>
                                                 <tr>
                                                     <td>26.03.2020.</td>
@@ -604,7 +604,7 @@
                                                     <td>Blokada</td>
                                                     <td>15.000,00</td>
                                                     <td>255,00</td>
-                                                    <td class="font-weight-bold color-blue">Uspešna</td>
+                                                    <td class="font-weight-bold color-green">Uspešna</td>
                                                 </tr>
                                             </tbody>
                                         </table>
